Spacing issue resolved

--- a/front-end/Assets/src/css/modules/_forms-redesign.scss
+++ b/front-end/Assets/src/css/modules/_forms-redesign.scss
@@ -385,7 +385,7 @@
 	}
 	@media (min-width: $break-md) {
 		[class*="50-50contentcontainer"] .equal-column:last-child {
-			padding-left: 2.05%;
+			padding-left: 3rem;
 		}		
     }
     
